Finally fixed the problem by making the app container a column aligned flexbox

--- a/src/frontend/App.css
+++ b/src/frontend/App.css
@@ -7,7 +7,9 @@
 
 .App_Container{
 
-  height:100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
 }
 
